3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Fix for bug #1540158 (Broken spells - Face of Death)
 server/attack.c: death attack always kills, no escape from it.
-----
Fix for bug #1460251 (Big monsters generated by generators broken). The generators
 didn't correctly create the other monster parts.
 common/map.c: move stuff out of link_multipart_objects to object.c
 common/object.c: add fix_multipart_object function, taken from link_multipart_objects
 include/libproto.h: new function.
 server/time.c: call new function when adding big monster.
-----
Fix for bug #1523571 (Diseases work only on "head" part).
 server/spell_attack.c:  the "more" part doesn't always have all the right flags,
  so get head before testing.
-----
 common/object.c: add "more", "head" and "env" values when dumping an object.
 server/spell_util.c: DMs can cast denied spells.
Ryo 2006-08-19

Recollected archetypes in order to integrate fix for bug #1530006:
  lib/smooth, lib/faces, lib/bmaps.paths, lib/bmaps, lib/archetypes,
  lib/animations, lib/crossfire.1, lib/crossfire.0, lib/treasures.bld
Raphael Quinet 2006-08-18

Added a plugin function to get time. Add Python wrapper.
 include/plugin.h sproto.h
 plugins/cfpython/cfpython.c
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 server/plugins.c
Ryo 2006-08-15

common/map.c, include/plugin.h, plugins/cfpython/{cfpython.c, include/cfpython_map.h,
    include/cfpython_map_private.h}, server/plugins.c, server/server.c,
    server/swap.c: Add EVENT_MAPLOAD and EVENT_MAPUNLOAD, add support to cfpython.
        Modify EVENT_MAP* to send the map object (in place of the path for