@@ -1084,13 +1084,14 @@ int command_free(object *op, char *params) {
         /* Item is either stack top, or is a number thus is now stack top, let's remove it  */
         dm_stack_pop(op->contr);
 
+    if (tmp->head)
+        tmp = tmp->head;
+
     if (!QUERY_FLAG(tmp, FLAG_REMOVED)) {
         new_draw_info(NDI_UNIQUE, 0, op, "Warning, item wasn't removed.");
         remove_ob(tmp);
     }
 
-    if (tmp->head)
-        tmp = tmp->head;
     free_object(tmp);
     return 1;
 }
